--- a/css/style.less
+++ b/css/style.less
@@ -178,6 +178,20 @@ footer .address {
 	}
 }
 
+// Bulk Import ///////////////////////////
+.attendee-wrap {
+	margin: 30px 0;
+
+	.attendee {
+		.checkbox {
+			margin: 32px 0 0 0;
+		}
+		.remove {
+			margin: 27px 0 0 10px;
+		}
+	}
+}
+
 // Thank You ///////////////////////////
 #total-hours {
 	color: @success-color;
