Added in edit btns to the table and added styles for the btns

--- a/css/style.less
+++ b/css/style.less
@@ -139,7 +139,7 @@ footer .address {
 }
 #sign-in-form {
 	.panel-group {
-    		margin: 20px 0px;
+		margin: 20px 0px;
 		a.collapsed .glyphicon {
 			-webkit-transition: all .3s ease-out;
 			-moz-transition: all .3s ease-out;
@@ -189,6 +189,23 @@ footer .address {
 		.remove {
 			margin: 27px 0 0 10px;
 		}
+	}
+}
+
+// User Management ///////////////////////////
+.edit-details-btn {
+	border: 1px solid #aaa;
+	color: #000;
+	border-radius: 30px;
+	margin-right: 30px;
+	padding: 15px 30px;
+}
+
+.edit-period {
+	color: #aaa;
+	&:hover,
+	&:focus {
+		color: #000;
 	}
 }
 
