Fixed success message styling. Added global message to header

--- a/css/style.less
+++ b/css/style.less
@@ -36,7 +36,11 @@ h1, h2, h3 {
 	font-size: 18px;
 	border-radius: 4px;
 }
-.alert {
+.alert-success {
+	background: @success-color;
+	color: @white;
+}
+.alert-danger {
 	background: @danger-color;
 	color: @white;
 }
