--- a/css/style.less
+++ b/css/style.less
@@ -231,6 +231,15 @@ footer .address {
 	}
 }
 
+// Dashboard ///////////////////////////
+section { 
+	border: 1px solid #000;
+	padding: 10px;
+	overflow: hidden;
+}
+.indent-1 {padding-left: 120px;}
+section > section {float:left;}
+
 // Bulk Import ///////////////////////////
 .attendee-wrap {
 	margin: 30px 0;
@@ -246,19 +255,28 @@ footer .address {
 }
 
 // User Management ///////////////////////////
-.edit-details-btn {
-	border: 1px solid #aaa;
-	color: #000;
-	border-radius: 30px;
-	margin-right: 30px;
-	padding: 15px 30px;
-}
-
-.edit-period {
-	color: #aaa;
-	&:hover,
-	&:focus {
+#volunteer-management-form {
+	h1 {
+		margin-top: 30px;
+	}
+	.details-btn {
+		border: 1px solid #aaa;
 		color: #000;
+		border-radius: 30px;
+		margin-right: 30px;
+		padding: 15px 30px;
+	}
+
+	.back.details-btn {
+		margin-right: 0;
+	}
+
+	.edit-period {
+		color: #aaa;
+		&:hover,
+		&:focus {
+			color: #000;
+		}
 	}
 }
 
