--- a/css/style.less
+++ b/css/style.less
@@ -142,12 +142,6 @@ header {
 	}
 }
 
-//#nav-items {
-//	padding: 20px 20px 25px;
-//	margin-bottom: 50px;
-//	background: rgba(214,214,214,.4);
-//}
-
 // Footer ////////////////////////
 footer {
 	background: rgba(52,52,52,.9);
@@ -245,9 +239,6 @@ section > section {float:left;}
 	margin: 30px 0;
 
 	.attendee {
-		.checkbox {
-			margin: 32px 0 0 0;
-		}
 		.remove {
 			margin: 27px 0 0 10px;
 		}
@@ -337,6 +328,13 @@ section > section {float:left;}
 	}
 	footer {
 		text-align:center;
+	}
+	.attendee-wrap {
+		.attendee {
+			.remove {
+				margin: 0 0 30px 10px;
+			}
+		}
 	}
 	.req-field-warning.badge {
 		font-size: 14px;
