Starting changes for the dashboard

--- a/css/style.less
+++ b/css/style.less
@@ -271,6 +271,19 @@ section > section {float:left;}
 	}
 }
 
+// Dashboard ///////////////////////////
+.boom .value {
+	font-size: 42px;
+	padding: 10px;
+	display: inline-block;
+}
+h2 .program-chart-options {
+	font-size:14px;
+	a {
+		padding: 0px 15px;
+	}
+}
+
 // Thank You ///////////////////////////
 #total-hours {
 	color: @success-color;
