Dashboard Complete - need to add date for extra help

--- a/css/style.less
+++ b/css/style.less
@@ -257,7 +257,9 @@ section > section {float:left;}
 		margin-right: 30px;
 		padding: 15px 30px;
 	}
-
+	.back {
+		cursor:pointer;
+	}
 	.back.details-btn {
 		margin-right: 0;
 	}
