--- a/css/style.less
+++ b/css/style.less
@@ -245,8 +245,8 @@ section > section {float:left;}
 	}
 }
 
-// User Management ///////////////////////////
-#volunteer-management-form {
+// Management ///////////////////////////
+#management-form {
 	h1 {
 		margin-top: 30px;
 	}
@@ -271,6 +271,12 @@ section > section {float:left;}
 			color: #000;
 		}
 	}
+}
+.manage-action {
+	padding: 0 8px;
+}
+.manage-action:hover {
+	text-decoration:none;
 }
 
 // Dashboard ///////////////////////////
