Added functionality on dashboard to download feedback and automatically signout all volunteers currently signed in

--- a/css/style.less
+++ b/css/style.less
@@ -244,6 +244,11 @@ section > section {float:left;}
 		}
 	}
 }
+#filter-section {
+	.btn-default {
+	    border: 1px solid rgba(22,22,22,0.35);
+	}
+}
 
 // Management ///////////////////////////
 #management-form {
