Fixed issue where inactive locations were showing up in the choose location drop down

--- a/css/style.less
+++ b/css/style.less
@@ -232,6 +232,10 @@ footer .address {
 		margin-right: 6px;
 	}
 }
+#preferences {
+    text-align: center;
+    margin-top: 20px;
+}
 
 // Sign Out ////////////////////////
 .contribute {
