--- a/www/css/style.css
+++ b/www/css/style.css
@@ -21,7 +21,7 @@ h3 {
   color: #454545;
 }
 .card {
-  box-shadow: 0px 0px 4px 3px rgba(80, 80, 80, 0.2);
+  box-shadow: 0px 0px 3px 1px rgba(80, 80, 80, 0.5);
   padding: 20px 30px;
   margin: 0 0 20px;
   font-size: 18px;
@@ -199,13 +199,15 @@ footer .address a:hover {
   text-align: center;
 }
 .contribute .contribute-button {
-  color: #fff;
-  background: #940303;
-  margin-bottom: 15px;
+    color: #fff;
+    background: #2e3738;
+    margin-bottom: 15px;
+    white-space: initial;
 }
 .contribute .contribute-button:hover {
-  color: #E5E5E5;
-  box-shadow: 0 0 20px 1px rgba(20, 20, 20, 0.8);
+    color: #E5E5E5;
+    background: #2f4446; 
+    box-shadow: 0 0 2px 2px rgba(20, 20, 20, 0.6);
 }
 section {
   border: 1px solid #000;
